chapter16/prometheus/alertmanager-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alertmanager
  namespace: istio-system
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: prometheus-kube-prometheus-alertmanager
            port: 
              number: 9093
        path: "/"
        pathType: Prefix
    host: alertmanager.apps.IPADDR.nip.io
  tls:
  - hosts:
    - alertmanager.apps.IPADDR.nip.io
    secretName: alertmanager-web-tls
