chapter16/prometheus/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana
  namespace: istio-system
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: prometheus-grafana
            port: 
              number: 80
        path: "/"
        pathType: Prefix
    host: grafana.apps.IPADDR.nip.io
  tls:
  - hosts:
    - grafana.apps.IPADDR.nip.io
    secretName: grafana-web-tls
